--- a/underg.html
+++ b/underg.html
@@ -20,7 +20,7 @@
 	<div id="wrapper">
 		<div id="headerBg" class="clearfix">
 			<div id="header">
-				<h1><B><FONT size= "5" face="Times New Roman">発表論文</FONT></B> </h1>
+				<h1><B><FONT size= "5" face="Times New Roman">学部生向け</FONT></B> </h1>
 				<ul id="gNavi" class="clearfix">			
 					<li><a href="link.html" title=""><B><FONT size= "2" face="Times New Roman">リンク</FONT></B></a></li>
 					<li><a href="access.html" title=""><B><FONT size= "2" face="Times New Roman">アクセス</FONT></B></a></li>
