--- a/member.html
+++ b/member.html
@@ -111,7 +111,7 @@
 
 				<tr>
 					<td width="100">特定助教</td>
-					<td width="80"><A href="http://www-cr.scphys.kyoto-u.ac.jp/member/tysaito/index.html">斎藤 隆之</A></td>
+					<td width="80">斎藤 隆之</td>
 					<td width="150">Saito Takayuki</td>
 					<td>340</td>
 					<td>075-753-4241</td>
