--- a/thesis.html
+++ b/thesis.html
@@ -20,7 +20,7 @@
 	<div id="wrapper">
 		<div id="headerBg" class="clearfix">
 			<div id="header">
-				<h1><B><FONT size= "5" face="Times New Roman">学位論文</FONT></B> </h1>
+				<h1><B><FONT size= "5" face="Times New Roman">論文</FONT></B> </h1>
 				<ul id="gNavi" class="clearfix">
 				
 					<li><B><a href="#cr_dron" title="">博士論文</a></B></li>
