minor update by Masuda 20160512

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
 
 					<li><a href="thesis.html" title=""><B><FONT size= "2" face="Times New Roman">論文</FONT></B></a></li>
 
-					<li><a href="member.html" title=""><B><FONT size= "2" face="Times New Roman">メンバー紹介</FONT></B></a></li>
+					<li><a href="member" title=""><B><FONT size= "2" face="Times New Roman">メンバー紹介</FONT></B></a></li>
 
-					<li class="firstItem"><a href="index.html" title=""><B><FONT size= "2" face="Times New Roman">ホーム</FONT></B></a></li>
+					<li class="firstItem"><a href="" title=""><B><FONT size= "2" face="Times New Roman">ホーム</FONT></B></a></li>
 
 				</ul>
 
