--- a/ob_member.html
+++ b/ob_member.html
@@ -23,9 +23,9 @@
 				<h1><B><FONT size= "5" face="Times New Roman">OB/OG 紹介</FONT></B> </h1>
 				<ul id="gNavi" class="clearfix">
 					<!--<li><B><a href="preparation.html" title="">懲りない面々(写真)</a></B></li>-->
-					<li><B><a href="preparation.html" title="">写真</a></B></li>
-					<li><B><a href="ob_member.html" title="">OB/OG紹介</a></B></li>
-					<li><B><a href="member.html" title="">メンバー紹介</a></B></li>
+					<li><B><a href="../life" title="">写真</a></B></li>
+					<li><B><a href="" title="">OB/OG紹介</a></B></li>
+					<li><B><a href="index.html" title="">メンバー紹介</a></B></li>
 					<li class="firstItem"><B><a href="index.html" title="">ホーム</a></B></li>
 				</ul>
 			</div>
