--- a/access.html
+++ b/access.html
@@ -26,7 +26,7 @@
 					<li><a href="access.html" title=""><B><FONT size= "2" face="Times New Roman">アクセス</FONT></B></a></li>
 					<li><a href="underg.html" title=""><B><FONT size= "2" face="Times New Roman">学部生向け</FONT></B></a></li>
 					<li><a href="thesis.html" title=""><B><FONT size= "2" face="Times New Roman">論文</FONT></B></a></li>
-					<li><a href="member.html" title=""><B><FONT size= "2" face="Times New Roman">メンバー紹介</FONT></B></a></li>
+					<li><a href="member" title=""><B><FONT size= "2" face="Times New Roman">メンバー紹介</FONT></B></a></li>
 					<li class="firstItem"><a href="index.html" title=""><B><FONT size= "2" face="Times New Roman">ホーム</FONT></B></a></li>
 				</ul>
 			</div>
