--- a/member.html
+++ b/member.html
@@ -23,10 +23,10 @@
 				<h1><B><FONT size= "5" face="Times New Roman">研究室メンバー</FONT></B> </h1>
 				<ul id="gNavi" class="clearfix">
 					<!--<li><B><a href="preparation.html" title="">懲りない面々(写真)</a></B></li>-->
-					<li><B><a href="life" title="">写真</a></B></li>
-					<li><B><a href="ob_member.html" title="">OB/OG紹介</a></B></li>
-					<li><B><a href="member.html" title="">メンバー紹介</a></B></li>
-					<li class="firstItem"><B><a href="index.html" title="">ホーム</a></B></li>
+					<li><B><a href="../life" title="">写真</a></B></li>
+					<li><B><a href="obog.html" title="">OB/OG紹介</a></B></li>
+					<li><B><a href="" title="">メンバー紹介</a></B></li>
+					<li class="firstItem"><B><a href=".." title="">ホーム</a></B></li>
 				</ul>
 			</div>
 		</div>
@@ -160,7 +160,7 @@
 				</tr>
 
 				<tr>
-					<td width="100">研究員</td>
+					<td width="100">研修員</td>
 					<td width="80">古村 翔太郎</td>
 					<td width="150">Komura Shotaro</td>
 					<td>326</td>
@@ -336,6 +336,8 @@
           <hr>
           <div id="profile-info">
             <P>(*) あとに @cr.scphys.kyoto-u.ac.jp をつけてください。</P>
+    <p><a href="http://byakko.scphys.kyoto-u.ac.jp:31415/cr_only/member/naisen/">実験室内線番号（内部向け要パスワード）</a><p>
+
           </div>
           <div id="pagetop"><a href="#wrapper">このページの先頭へ</a></div>
         </div>
