--- a/preparation.html
+++ b/preparation.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>学部生向け</title>
+<title>アクセス</title>
 <meta name="keywords" content="キーワード" />
 <meta name="description" content="サイトの説明" />
 <meta http-equiv="Content-Language" content="ja" />
@@ -20,7 +20,7 @@
 	<div id="wrapper">
 		<div id="headerBg" class="clearfix">
 			<div id="header">
-				<h1><B><FONT size= "5" face="Times New Roman">学部生向け</FONT></B> </h1>
+				<h1><B><FONT size= "5" face="Times New Roman">準備中</FONT></B> </h1>
 				<ul id="gNavi" class="clearfix">			
 					<li><a href="link.html" title=""><B><FONT size= "2" face="Times New Roman">リンク</FONT></B></a></li>
 					<li><a href="access.html" title=""><B><FONT size= "2" face="Times New Roman">アクセス</FONT></B></a></li>
@@ -34,28 +34,13 @@
 
 <div id="mainContents" class="clearfix">
 
-			<div class="clearfix">
-				<h2><B><FONT size="4">学部生向け</FONT></B></h2>
-				<br>
-				<div class="topicsBox">
-					<strong>研究紹介</strong>
-					<a href="lorentz" title="">ローレンツ祭紹介</a>
-				</div>
-				<div class="topicsBox">
-					<strong>課題研究 P6</strong>
-					<a href="gakubu/P6.html" title="">課題研究 P6</a>
-				</div>
-				<div class="topicsBox firstItem">
-					<strong>課題演習 A7/A8</strong>
-					<a href="gakubu/A78.html" title="">課題演習 A7/A8</a>
-				</div>
-			</div>
-
+	<h1><B><FONT size= "5" face="Times New Roman">準備中</FONT></B> </h1>
+	
+	
 	<div id="aboutus">
-
-          <hr>
-          <div id="pagetop"><a href="#wrapper">このページの先頭へ</a></div>
-          
+		<h2>　</h2>	
+		<hr>
+		<div id="pagetop"><a href="index.html">ホームへ戻る</a></div>
 	</div>
 
 </div>		
