added X group's page

--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
 
 					<br>
 
-					<a href="preparation.html" title=""><FONT size="3">X線グループのページ</FONT></a>,&nbsp;&nbsp;
+					<a href="X" title=""><FONT size="3">X線グループのページ</FONT></a>,&nbsp;&nbsp;
 
-					<a href="http://www-cr.scphys.kyoto-u.ac.jp/research/MeV-gamma/wiki/wiki.cgi" title=""><FONT size="3">低エネルギーγ線グループのページ</FONT></a>,&nbsp;&nbsp;
+					<a href="research/MeV-gamma/wiki/wiki.cgi" title=""><FONT size="3">低エネルギーγ線グループのページ</FONT></a>,&nbsp;&nbsp;
 
 					<a href="TeV" title=""><FONT size="3">高エネルギーγ線グループのページ</FONT></a>
 
