--- a/thesis.html
+++ b/thesis.html
@@ -41,7 +41,7 @@
 				<strong><FONT size="3">各グループのページを参照してください。</FONT></strong>
 
 				<div class="IntroBox">
-					<a href="X/publications.html" title="">X線グループのページ</a>,&nbsp;&nbsp;
+					<a href="http://www-cr.scphys.kyoto-u.ac.jp/X/publications.html" title="">X線グループのページ</a>,&nbsp;&nbsp;
 					<a href="http://www-cr.scphys.kyoto-u.ac.jp/research/MeV-gamma/wiki/wiki.cgi" title="">低エネルギーγ線グループのページ</a>,&nbsp;&nbsp;
 					<a href="http://www.cta-observatory.jp" title="">高エネルギーγ線グループのページ</a>
 				</div>
