change link of higashiM_can.pdf by Matsumura 20160517

--- a/thesis.html
+++ b/thesis.html
@@ -700,7 +700,7 @@
                 	<th width="60">2005</th>
 					<th width="80">東 悠介</th>                					    
 					<th width="550">CANGAROO-III望遠鏡 ステレオ解析手法の確立とFADC導入試験</th>
-					<th width="200"><a href="m_ron/azumaM.pdf">PDF</a></th>
+					<th width="200"><a href="m_ron/higashiM_can.pdf">PDF</a></th>
 				</tr>	
 				
                 <tr>
