link uploard by Matsumura 20160517

--- a/thesis.html
+++ b/thesis.html
@@ -595,7 +595,7 @@
                 	<th width="60">2008</th>
 					<th width="80">澤田 真理</th>                					    
 					<th width="550">次期X線天文衛星Astro-H搭載CCDカメラSXIの軌道上バックグラウンドの評価およびカメラボディの設計</th>
-					<th width="200"><a href="m_ron/sawanoM.pdf">PDF</a></th>
+					<th width="200"><a href="m_ron/sawadaM.pdf">PDF</a></th>
 				</tr>	
 
                 <tr>
@@ -881,7 +881,7 @@
                 	<th width="60">1993</th>
 					<th width="80">尾崎 正伸</th>                					    
 					<th width="550">X線CCD評価システムの開発</th>
-					<th width="200"><a href="m_ron/ozakiM.pdf">PDF</a></th>
+					<th width="200"><a href="m_ron/ozakiM.ps">PS</a></th>
 				</tr>		
 
                 <tr>
