add link of member only by Matsu 20160517

--- a/link.html
+++ b/link.html
@@ -39,6 +39,8 @@
 
 <h1><B><FONT size= "4" face="Times New Roman"><a href="http://www.scphys.kyoto-u.ac.jp">京都大学 理学研究科 物理学第二教室</a></FONT></B> </h1>
 
+<h1><B><FONT size= "4" face="Times New Roman"><a href="http://byakko.scphys.kyoto-u.ac.jp:31415/cr_only/">研究室内部情報 (要パスワード)</a></FONT></B> </h1>
+
 <h1><B><FONT size= "4" face="Times New Roman"><a href="http://www.usss.kyoto-u.ac.jp">宇宙ユニット</a></FONT></B> </h1>
 
 <h1><B><FONT size= "4" face="Times New Roman"><a href="http://www-cr.scphys.kyoto-u.ac.jp/member/koyama/">小山勝二 名誉教授のホームページ</a></FONT></B> </h1>
