add link of old cr homepage by Matsumura 20160518

--- a/link.html
+++ b/link.html
@@ -45,7 +45,7 @@
 
 <h1><B><FONT size= "4" face="Times New Roman"><a href="http://www-cr.scphys.kyoto-u.ac.jp/member/koyama/">小山勝二 名誉教授のホームページ</a></FONT></B> </h1>
 
-<!--<h1><B><FONT size= "4" face="Times New Roman"><a href="http://www-cr.scphys.kyoto-u.ac.jp">旧宇宙線研究室ホームページ</a></FONT></B> </h1>-->
+<h1><B><FONT size= "4" face="Times New Roman"><a href="../html/index.html">旧宇宙線研究室ホームページ</a></FONT></B> </h1>
 
 </div>		
 
