--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
 				<div class="IntroBox">
 
-					<strong><FONT size="4">京都大学宇宙線研究室は、X線、低エネルギーγ線、高エネルギーγ線の3つのグループが存在します。各グループがそれぞれの波長帯域での観測データの解析及び次世代の観測に向けた装置開発を日々、精力的に行っています。それぞれのグループの研究詳細は以下のリンクを参照してくだいさい。</FONT></strong>
+					<strong><FONT size="4">京都大学宇宙線研究室は、X線、低エネルギーγ線、高エネルギーγ線の3つのグループが存在します。各グループがそれぞれの波長帯域での観測データの解析及び次世代の観測に向けた装置開発を日々、精力的に行っています。それぞれのグループの研究詳細は上のリンクを参照してくだいさい。</FONT></strong>
 
 				</div>
 
