--- a/ob_member.html
+++ b/ob_member.html
@@ -192,7 +192,7 @@
 
 				<tr>
 					<td width="60">2013</td>   				
-					<td width="100">澤野 達也</td>
+					<td width="100">澤野 達哉</td>
 					<td width="140">Sawano Tatsuya</td>
 					<td width="80">γ線</td>	
 					<td width="100">D3 (学振)</td>			
