Update thesis.html by Masuda 160523

--- a/thesis.html
+++ b/thesis.html
@@ -42,7 +42,7 @@
 
 				<div class="IntroBox">
 					<a href="http://www-cr.scphys.kyoto-u.ac.jp/X/publications.html" title="">X線グループのページ</a>,&nbsp;&nbsp;
-					<a href="http://www-cr.scphys.kyoto-u.ac.jp/research/MeV-gamma/wiki/wiki.cgi/Presentations?page=Top" title="">低エネルギーγ線グループのページ</a>,&nbsp;&nbsp;
+					<a href="http://www-cr.scphys.kyoto-u.ac.jp/research/MeV-gamma/wiki/wiki.cgi/Publications?page=Top" title="">低エネルギーγ線グループのページ</a>,&nbsp;&nbsp;
 					<a href="http://www.cta-observatory.jp" title="">高エネルギーγ線グループのページ</a>
 				</div>
 				<!--				
