revise member.html by Matsu 20160725.

--- a/member.html
+++ b/member.html
@@ -321,7 +321,7 @@
 
 				<tr>
 					<td width="100">M1</td>
-					<td width="80">林 秀樹</td>
+					<td width="80">林 秀輝</td>
 					<td width="150">Hayashi Hideki</td>
 					<td>338</td>
 					<td>075-753-3827</td>
