minor correction in member.html by Masuda 160812

--- a/member.html
+++ b/member.html
@@ -292,7 +292,7 @@
 				<tr>
 					<td width="100">M1</td>
 					<td width="80">谷口 幹幸</td>
-					<td width="150">Taniguchi Motoyuki</td>
+					<td width="150">Taniguchi Tomoyuki</td>
 					<td>336</td>
 					<td>075-753-3843</td>
 					<td>taniguchi</td>
