--- a/ob_member.html
+++ b/ob_member.html
@@ -26,7 +26,7 @@
 					<li><B><a href="../life" title="">写真</a></B></li>
 					<li><B><a href="" title="">OB/OG紹介</a></B></li>
 					<li><B><a href="index.html" title="">メンバー紹介</a></B></li>
-					<li class="firstItem"><B><a href="index.html" title="">ホーム</a></B></li>
+					<li class="firstItem"><B><a href="../index.html" title="">ホーム</a></B></li>
 				</ul>
 			</div>
 		</div>
@@ -529,7 +529,7 @@
 					<td width="100">高田 淳史</td>
 					<td width="140">Takada Atsushi</td>
 					<td width="80">γ線</td>	
-					<td width="100">D4 (学振)</td>			
+					<td width="100">D3 (学振)</td>			
 					<td width="180">京都大学 PD</td>	
                   	<th width="180">京都大学 助教</th>  													
 				</tr> 
@@ -623,7 +623,7 @@
 					<td width="100">渡部 至緒</td>
 					<td width="140">Watanabe Shio</td>
 					<td width="80">γ線</td>	
-					<td width="100">D4</td>			
+					<td width="100">D3</td>			
 					<td width="180">　</td>	
                   	<th width="180">　</th>  													
 				</tr>
@@ -920,7 +920,7 @@
             </table>
           </div>
           
-		<h1><FONT size= "3" face="Times New Roman">1999年以前は<a href="http://www-cr.scphys.kyoto-u.ac.jp/member/obog.html">旧ホームベージ</a>へ</FONT></h1>	
+		<h1><FONT size= "3" face="Times New Roman">1999年以前は<a href="http://www-cr.scphys.kyoto-u.ac.jp/old_html/index.html">旧ホームベージ</a>へ</FONT></h1>	
 		 <hr>
 		
           <div id="pagetop"><a href="#wrapper">このページの先頭へ</a></div>
