--- a/member.html
+++ b/member.html
@@ -246,6 +246,7 @@
           <hr>
           <div id="profile-info">
             <P>(*) あとに @cr.scphys.kyoto-u.ac.jp をつけてください。</P>
+            <P>(**) あとに @st.kyoto-u.ac.jp をつけてください。</P>
     <p><a href="http://byakko.scphys.kyoto-u.ac.jp:31415/cr_only/member/naisen/">実験室内線番号（内部向け要パスワード）</a><p>
 
           </div>
