Matsu changes index.html ob_member.html member.html on 2017.4.10.

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
 						<dt>2016.07.29</dt>
 
-						<dd>M1の尾近洸行さんが<a href="http://www.astro-wakate.sakura.ne.jp/ss2016/web/">第46回天文・天体物理若手夏の学校</a>にてポスターアワードを受賞しました。</dd>
+						<dd>M1の尾近洸行さんが<a href="http://www.astro-wakate.sakura.ne.jp/ss2016/web/">第46回天文・天体物理若手夏の学校</a>にてオーラルアワードを受賞しました。</dd>
 						
 						<dt>2016.07.07</dt>
 
