--- a/index.html
+++ b/index.html
@@ -212,6 +212,12 @@
 
 
 
+						<dt>2015.03.19</dt>
+
+						<dd>助教の田中孝明さんが日本天文学会研究奨励賞を受賞しました。<a href="http://www.asj.or.jp/asj/prize/Shorei.html">リンク</a>。</dd>
+
+
+
 						<dt>2013.12.20</dt>
 
 						<dd>田中孝明 助教の<a href="http://news.sciencemag.org/breakthrough-of-the-year-2013">研究成果</a>が「サイエンス」誌の <a href="http://news.sciencemag.org/breakthrough-of-the-year-2013">「ブレークスルー・オブ・ザ・イヤー 2013」</a>の次点に選出されました。<a href="http://www.kyoto-u.ac.jp/static/ja/news_data/h/h1/news7/2013_1/131220_5.htm">リンク</a></dd>					
