Matsu revise ob_memeber.html at 2017.4.10

--- a/ob_member.html
+++ b/ob_member.html
@@ -47,6 +47,90 @@
                   <th width="180"><B><FONT size= "2">転出先</FONT></B></th>     
                   <th width="180"><B><FONT size= "2">現職</FONT> <font size= "1.5">(研究職のみ, 2016年更新)</font></B></th>                       
                 </tr>
+
+ 				<tr>
+					<td>　</td>
+				</tr>
+
+				<tr>
+					<td width="60">2016</td>
+					<td width="100">伊藤 真音</td>
+					<td width="140">Ito Makoto</td>
+					<td width="80">X 線</td>
+					<td width="100">M2</td>
+					<td width="180">電子部品専業メーカー</td>
+					<th width="180"></th>
+				</tr>
+
+				<tr>
+					<td width="60">2016</td>
+					<td width="100">大村 峻一</td>
+					<td width="140">Ohmura Shunichi</td>
+					<td width="80">X 線</td>
+					<td width="100">M2</td>
+					<td width="180">JAXA関連企業</td>
+					<th width="180"></th>
+				</tr>
+
+				<tr>
+					<td width="60">2016</td>
+					<td width="100">今野 祐介</td>
+					<td width="140">Konno Yusuke</td>
+					<td width="80">γ線</td>
+					<td width="100">D3</td>
+					<td width="180">医療機器メーカー</td>
+					<th width="180"></th>
+				</tr>
+
+				<tr>
+					<td width="60">2016</td>
+					<td width="100">園田 真也</td>
+					<td width="140">Sonoda Shinya</td>
+					<td width="80">γ線</td>
+					<td width="100">PD</td>
+					<td width="180">京都 Space Gamma</td>
+					<th width="180"></th>
+				</tr>
+
+				<tr>
+					<td width="60">2016</td>
+					<td width="100">武田 彩希</td>
+					<td width="140">Takeda Ayaki</td>
+					<td width="80">X 線</td>
+					<td width="100">PD</td>
+					<td width="180">宮崎大学 助教</td>
+					<th width="180">宮崎大学 助教</th>
+				</tr>
+
+				<tr>
+					<td width="60">2016</td>
+					<td width="100">谷川 俊介</td>
+					<td width="140">Tanigawa Shunsuke</td>
+					<td width="80">γ線</td>
+					<td width="100">M2</td>
+					<td width="180">社会インフラ企業</td>
+					<th width="180"></th>
+				</tr>
+
+				<tr>
+					<td width="60">2016</td>
+					<td width="100">中増 勇真</td>
+					<td width="140">Nakamasu Yuma</td>
+					<td width="80">γ線</td>
+					<td width="100">M2</td>
+					<td width="180">総合電機メーカー</td>
+					<th width="180"></th>
+				</tr>
+
+				<tr>
+					<td width="60">2016</td>
+					<td width="100">水本 哲矢</td>
+					<td width="140">Mizumoto Tetsuya</td>
+					<td width="80">γ線</td>
+					<td width="100">PD</td>
+					<td width="180">京都 Space Gamma</td>
+					<th width="180"></th>
+				</tr>
                 
  				<tr>
 					<td>　</td>
