--- a/ob_member.html
+++ b/ob_member.html
@@ -68,7 +68,7 @@
 					<td width="140">Ohmura Shunichi</td>
 					<td width="80">X 線</td>
 					<td width="100">M2</td>
-					<td width="180">JAXA関連企業</td>
+					<td width="180">宇宙開発関連企業</td>
 					<th width="180"></th>
 				</tr>
 
