Matsu revised thesis.html at 2017.4.10.

--- a/thesis.html
+++ b/thesis.html
@@ -401,14 +401,14 @@
 					<th>2016</th>
 					<th>伊藤 真音</th>
 					<th>次世代X線天文衛星搭載に向けた裏面照射型 SOI ピクセル検出器の軟 X 線感度の改善</th>
-					<th><a></a></th>
+					<th><a href="m_ron/itouM.pdf">PDF</a></th>
 				</tr>
 
 				<tr>
 					<th>2016</th>
-					<th>大村 峻一/th>
+					<th>大村 峻一</th>
 					<th>すざく衛星による狭輝線セイファート1型銀河の広帯域観測</th>
-					<th><a></a></th>
+					<th><a href="m_ron/ohmuraM.pdf">PDF</a></th>
 				</tr>
 
 				<tr>
