Matsu revised thesis.html at 2017.4.11

--- a/thesis.html
+++ b/thesis.html
@@ -422,7 +422,7 @@
 					<th>2016</th>
 					<th>中増 勇真</th>
 					<th>MeV ガンマ線望遠鏡に向けた高エネルギー分解能MPPC シンチレーションカメラの開発</th>
-					<th><a href="http://www-cr.scphys.kyoto-u.ac.jp/m_ron/nakamasu.pdf">PDF</a></th>
+					<th><a href="m_ron/nakamasu.pdf">PDF</a></th>
 				</tr>
 
 				<tr>
