Matsu revised thesis.html at 2017.4.11

--- a/thesis.html
+++ b/thesis.html
@@ -112,7 +112,7 @@
 				<tr>
 					<th>2012</th>
 					<th>劉 周強</th>
-					<th>X-ray Study on the Active History of Sagittarius A* by Three-dimensional View of thenter</th>
+					<th>X-ray Study on the Active History of Sagittarius A* by Three-dimensional View of the Galactic Center</th>
 					<th><a href="d_ron/ryuD.pdf">PDF</a></th>
 				</tr> 
 				
@@ -182,7 +182,7 @@
 				<tr>
 					<th>2007</th>
 					<th>乾 達也</th>
-					<th>X-ray Study of the Variable Neutral Iron Line Emission of the Sgr B2 Complex in thenter Region</th>
+					<th>X-ray Study of the Variable Neutral Iron Line Emission of the Sgr B2 Complex in the Galactic Center Region</th>
 					<th><a href="d_ron/inuiD.pdf">PDF</a></th>
 				</tr>
 
@@ -224,7 +224,7 @@
 				<tr>
 					<th>2005</th>
 					<th>高木 慎一郎</th>
-					<th>Development of Back Supportless CCD and Focal Plane Assembly for Soft X-ray Imager onbT sattelite</th>
+					<th>Development of Back Supportless CCD and Focal Plane Assembly for Soft X-ray Imager onboard the NeXT Sattelite</th>
 					<th><a href="d_ron/takagiD.pdf">PDF</a></th>
 				</tr>
 
@@ -245,7 +245,7 @@
 				<tr>
 					<th>2004</th>
 					<th>千田 篤史</th>
-					<th>A Study of Thermal and Nonthermal X-ray Structures in the Galactic Center region</th>
+					<th>A Study of Thermal and Nonthermal X-ray Structures in the Galactic Center Region</th>
 					<th><a href="d_ron/sendaD.pdf">PDF</a></th>
 				</tr>
 
@@ -266,14 +266,14 @@
 				<tr>
 					<th>2003</th>
 					<th>馬場 彩</th>
-					<th>A Detailed Spatial and Spectral Study of Synchrotron X-rays from Supernova Remhandra</th>
+					<th>A Detailed Spatial and Spectral Study of Synchrotron X-rays from Supernova Remnants with Chandra</th>
 					<th><a href="d_ron/bambaD.pdf">PDF</a></th>
 				</tr>
 
 				<tr>
 					<th>2002</th>
 					<th>今西 健介</th>
-					<th>X-ray Study of Low-mass Young Stellar Objects in the Rho Ophiuchi Star-forming Regndra</th>
+					<th>X-ray Study of Low-mass Young Stellar Objects in the Rho Ophiuchi Star-forming Region with Chandra</th>
 					<th><a href="d_ron/kensukeD.pdf">PDF</a></th>
 				</tr>
 
