Matsu revised member.html at 2017.4.19

--- a/member.html
+++ b/member.html
@@ -44,7 +44,7 @@
 				  <th width="130"><B><FONT size= "2">Name</FONT></B></th>
 				  <th width="45"><B><FONT size= "2">居室</FONT></B></th>
 				  <th width="90"><B><FONT size= "2">電話番号</FONT></B></th>
-				  <th width="100"><B><FONT size= "2">E-mail (*)</FONT></B></th>
+				  <th width="100"><B><FONT size= "2">E-mail</FONT></B></th>
 				  <th width="100"><B><FONT size= "2">所属グループ</FONT></B></th>
 				</tr>
 
