--- a/member.html
+++ b/member.html
@@ -164,7 +164,7 @@
 					<td>Matsumura Hideaki</td>
 					<td>327</td>
 					<td>075-753-3869</td>
-					<td>matsumura.hideaki.23u**</td>
+					<td>matsumura.hideaki.23u***</td>
 					<td>X線</td>
 				</tr>
 
@@ -254,7 +254,7 @@
 					<td>Idogaki Hiroshi</td>
 					<td>325</td>
 					<td></td>
-					<td>idogaki.hiroshi.47m**</td>
+					<td>idogaki.hiroshi.47m***</td>
 					<td>線</td>
 				</tr>
 
@@ -264,7 +264,7 @@
 					<td>Onozaka Ken</td>
 					<td>325</td>
 					<td></td>
-					<td>okuno.tomoyuki.32r**</td>
+					<td>okuno.tomoyuki.32r***</td>
 					<td>線</td>
 				</tr>
 
@@ -274,7 +274,7 @@
 					<td>Okuno Tomoyuki</td>
 					<td>327</td>
 					<td></td>
-					<td>okuno.tomoyuki.32r**</td>
+					<td>okuno.tomoyuki.32r***</td>
 					<td>線</td>
 				</tr>
 
@@ -284,7 +284,7 @@
 					<td>Saito Kaname</td>
 					<td>338</td>
 					<td></td>
-					<td>saito.kaname.65c**</td>
+					<td>saito.kaname.65c***</td>
 					<td>線</td>
 				</tr>
 
@@ -294,7 +294,7 @@
 					<td>Harada Soudai</td>
 					<td>336</td>
 					<td></td>
-					<td>harada.soudai.78s**</td>
+					<td>harada.soudai.78s***</td>
 					<td>線</td>
 				</tr>
 
@@ -304,7 +304,7 @@
 					<td>Hirako Joe</td>
 					<td>327</td>
 					<td></td>
-					<td>hirako.joe.53c**</td>
+					<td>hirako.joe.53c***</td>
 					<td>線</td>
 				</tr>
 
@@ -314,7 +314,7 @@
 					<td>Fuji Ryohei</td>
 					<td>325</td>
 					<td></td>
-					<td>fuji.ryohei.38e**</td>
+					<td>fuji.ryohei.38e***</td>
 					<td>線</td>
 				</tr>
 
@@ -325,7 +325,8 @@
 		  <hr>
 		  <div id="profile-info">
 			<P>(*) あとに @cr.scphys.kyoto-u.ac.jp をつけてください。</P>
-			<P>(**) あとに @st.kyoto-u.ac.jp をつけてください。</P>
+			<P>(**) あとに @kyoto-u.ac.jp をつけてください。</P>
+			<P>(***) あとに @st.kyoto-u.ac.jp をつけてください。</P>
 	<p><a href="http://byakko.scphys.kyoto-u.ac.jp:31415/cr_only/member/naisen/">実験室内線番号（内部向け要パスワード）</a><p>
 
 		  </div>
