Matsu revised member.html at 2017.4.26.

--- a/member.html
+++ b/member.html
@@ -255,7 +255,7 @@
 					<td>325</td>
 					<td></td>
 					<td>idogaki.hiroshi.47m***</td>
-					<td>線</td>
+					<td>X線</td>
 				</tr>
 
 				<tr>
@@ -264,8 +264,8 @@
 					<td>Onozaka Ken</td>
 					<td>325</td>
 					<td></td>
-					<td>okuno.tomoyuki.32r***</td>
-					<td>線</td>
+					<td>onozaka.ken.25m***</td>
+					<td>低エネルギーγ線</td>
 				</tr>
 
 				<tr>
@@ -275,7 +275,7 @@
 					<td>327</td>
 					<td></td>
 					<td>okuno.tomoyuki.32r***</td>
-					<td>線</td>
+					<td>X線</td>
 				</tr>
 
 				<tr>
@@ -285,7 +285,7 @@
 					<td>338</td>
 					<td></td>
 					<td>saito.kaname.65c***</td>
-					<td>線</td>
+					<td>低エネルギーγ線</td>
 				</tr>
 
 				<tr>
@@ -295,7 +295,7 @@
 					<td>336</td>
 					<td></td>
 					<td>harada.soudai.78s***</td>
-					<td>線</td>
+					<td>X線</td>
 				</tr>
 
 				<tr>
@@ -305,10 +305,10 @@
 					<td>327</td>
 					<td></td>
 					<td>hirako.joe.53c***</td>
-					<td>線</td>
+					<td>高エネルギーγ線</td>
 				</tr>
 
-				<tr>
+<!-- 				<tr>
 					<td>M1</td>
 					<td>藤井 涼平</td>
 					<td>Fuji Ryohei</td>
@@ -316,7 +316,7 @@
 					<td></td>
 					<td>fuji.ryohei.38e***</td>
 					<td>線</td>
-				</tr>
+				</tr> -->
 
 				
 			  </tbody>
