--- a/thesis.html
+++ b/thesis.html
@@ -434,7 +434,7 @@
 					<th>2016</th>
 					<th>吉川 慶</th>
 					<th>MeVガンマ線望遠鏡ETCCにおける新トリガー方式の開発と不感時間削減</th>
-					<th><a></a></th>
+					<th><a href="m_ron/yosikawaM.pdf">PDF</a></th>
 				</tr>
 
 				<tr>
