the latest index.html(add Harada-kun news)

--- a/X/access.html
+++ b/X/access.html
@@ -192,13 +192,9 @@
   <footer>
     <div id="link">
       <ul>
-        <li><a href="#">リンク</a></li>
-        <li><a href="#">リンク</a></li>
-        <li><a href="#">リンク</a></li>
-        <li><a href="#">リンク</a></li>
-        <li><a href="#">リンク</a></li>
-        <li><a href="#">リンク</a></li>
-        <li><a href="#">リンク</a></li>
+        <li><a href="http://www.sci.kyoto-u.ac.jp/modules/tinycontent/">京都大学 理学研究科</a></li>
+        <li><a href="http://www.scphys.kyoto-u.ac.jp/">京都大学 理学研究科 物理学第二教室</a></li>
+        <li><a href="http://www.usss.kyoto-u.ac.jp/">宇宙ユニット</a></li>
       </ul>
     </div>
     <div id="address_frame">
