--- a/X/members.html
+++ b/X/members.html
@@ -69,7 +69,7 @@
       </div>
     </div>
     <h3>田中 孝明（Tanaka Takaaki）</h3>
-    <div class="details_frame"> <img src="image/nophoto.png" alt="真鍋俊也" class="fl">
+    <div class="details_frame"> <img src="image/tanaka.jpg" alt="真鍋俊也" class="fl">
       <div class="staffdetails">
           <h4>役職</h4>
           <p>助教</p>
@@ -80,7 +80,7 @@
       </div>
     </div>
     <h3>内田 裕之（Uchida Hiroyuki）</h3>
-    <div class="details_frame"> <img src="image/nophoto.png" alt="真鍋俊也" class="fl">
+    <div class="details_frame"> <img src="image/uchida.jpg" alt="真鍋俊也" class="fl">
       <div class="staffdetails">
           <h4>役職</h4>
           <p>助教</p>
@@ -89,56 +89,34 @@
           <h4>電話番号</h4>
           <p>075-753-3827</p>
       </div>
-    </div>
-    <h3>武田 彩希（Takeda Ayaki）</h3>
-    <div class="details_frame"> <img src="image/nophoto.png" alt="真鍋俊也" class="fl">
-      <div class="staffdetails">
-          <h4>役職</h4>
-          <p>PD</p>
-          <h4>居室</h4>
-          <p>325</p>
-          <h4>電話番号</h4>
-          <p>075-753-3867</p>
-     </div>
-    </div>
-    <h3>松村 英晃（Matsumura Hideaki）</h3>
-    <div class="details_frame"> <img src="image/nophoto.png" alt="真鍋俊也" class="fl">
+      </div>
+    <h3>小林 翔悟（Kobayashi Shogo）</h3>
+    <div class="details_frame"> <img src="image/kobayashi.jpg" alt="真鍋俊也" class="fl">
       <div class="staffdetails">
           <h4>学年</h4>
-          <p>D2 (学振研究員)</p>
+          <p>PD</p>
+          <h4>居室</h4>
+          <p>340</p>
+          <h4>電話番号</h4>
+          <p>075-753-4241</p>
+        </div>
+        </div>
+    <h3>松村 英晃（Matsumura Hideaki）</h3>
+    <div class="details_frame"> <img src="image/matsumura.jpg" alt="真鍋俊也" class="fl">
+      <div class="staffdetails">
+          <h4>学年</h4>
+          <p>D3 (学振研究員)</p>
           <h4>居室</h4>
           <p>327</p>
           <h4>電話番号</h4>
           <p>075-753-3869</p>
-      </div>
-    </div>
-    <h3>伊藤 真音（Ito Makoto）</h3>
-    <div class="details_frame"> <img src="image/nophoto.png" alt="真鍋俊也" class="fl">
-        <div class="staffdetails">
-            <h4>学年</h4>
-            <p>M2</p>
-            <h4>居室</h4>
-            <p>325</p>
-            <h4>電話番号</h4>
-            <p>075-753-3867</p>
-       </div>
-        </div>
-    <h3>大村 峻一（Ohmura Shunichi）</h3>
-    <div class="details_frame"> <img src="image/nophoto.png" alt="真鍋俊也" class="fl">
-        <div class="staffdetails">
-            <h4>学年</h4>
-            <p>M2</p>
-           <h4>居室</h4>
-            <p>327</p>
-            <h4>電話番号</h4>
-            <p>075-753-3869</p>
         </div>
         </div>
     <h3>尾近 洸行（Okon Hiromichi）</h3>
-    <div class="details_frame"> <img src="image/nophoto.png" alt="真鍋俊也" class="fl">
+    <div class="details_frame"> <img src="image/okon.jpg" alt="真鍋俊也" class="fl">
         <div class="staffdetails">
             <h4>学年</h4>
-            <p>M1</p>
+            <p>M2</p>
            <h4>居室</h4>
             <p>340</p>
             <h4>電話番号</h4>
@@ -146,21 +124,21 @@
         </div>
         </div>
     <h3>立花 克裕（Tachibana Katsuhiro）</h3>
-    <div class="details_frame"> <img src="image/nophoto.png" alt="真鍋俊也" class="fl">
+    <div class="details_frame"> <img src="image/tachibana.jpg" alt="真鍋俊也" class="fl">
         <div class="staffdetails">
             <h4>学年</h4>
-            <p>M1</p>
+            <p>M2</p>
             <h4>居室</h4>
             <p>336</p>
             <h4>電話番号</h4>
-            <p>075-753-3827</p>
+            <p>075-753-3843</p>
         </div>
         </div>
     <h3>林 秀樹（Hayashi Hideki）</h3>
-    <div class="details_frame"> <img src="image/nophoto.png" alt="真鍋俊也" class="fl">
+    <div class="details_frame"> <img src="image/hayashi.jpg" alt="真鍋俊也" class="fl">
         <div class="staffdetails">
             <h4>学年</h4>
-            <p>M1</p>
+            <p>M2</p>
           <h4>居室</h4>
             <p>338</p>
             <h4>電話番号</h4>
@@ -168,12 +146,59 @@
         </div>
         </div>
 
+    <h3>井戸垣 洋志（Idogaki Hiroshi）</h3>
+    <div class="details_frame"> <img src="image/idogaki.jpg" alt="真鍋俊也" class="fl">
+        <div class="staffdetails">
+            <h4>学年</h4>
+            <p>M1</p>
+          <h4>居室</h4>
+            <p>325</p>
+            <h4>電話番号</h4>
+            <p>075-753-3867</p>
+        </div>
+        </div>
 
-    <h2>過去のメンバー</h2>
+    <h3>奥野 智行（Okuno Tomoyuki）</h3>
+    <div class="details_frame"> <img src="image/okuno.jpg" alt="真鍋俊也" class="fl">
+        <div class="staffdetails">
+            <h4>学年</h4>
+            <p>M1</p>
+          <h4>居室</h4>
+            <p>327</p>
+            <h4>電話番号</h4>
+            <p>075-753-3869</p>
+        </div>
+        </div>
+    <h3>原田 颯大（Harada Sodai）</h3>
+    <div class="details_frame"> <img src="image/harada.jpg" alt="真鍋俊也" class="fl">
+        <div class="staffdetails">
+            <h4>学年</h4>
+            <p>M1</p>
+          <h4>居室</h4>
+            <p>336</p>
+            <h4>電話番号</h4>
+            <p>075-753-3843</p>
+        </div>
+        </div>
+
+
+    <h2 id=3>過去のメンバー</h2>
     <table class="color">
       <tr>
         <th class="w150" scope="col">氏名</th>
         <th scope="col">転出先</th>
+      </tr>
+      <tr>
+        <td>&nbsp;伊藤 真音</td>
+        <td>&nbsp電子部品専業メーカー</td>
+      </tr>
+      <tr>
+        <td>&nbsp;大村 峻一</td>
+        <td>&nbsp;宇宙開発関連企業</td>
+      </tr>
+　　　<tr>
+        <td>&nbsp;武田 彩希</td>
+        <td>&nbsp;宮崎大学 助教</td>
       </tr>
       <tr>
         <td>&nbsp;信川　久実子</td>
