--- a/X/publications.html
+++ b/X/publications.html
@@ -45,9 +45,9 @@
       </li>
       <li class="nav5"><a href="recruitment.html">大学院生募集</a>
         <ul>
-          <li><a href="publications.html#1">鶴剛教授からひとこと</a></li>
+          <li><a href="http://www-cr.scphys.kyoto-u.ac.jp/member/tsuru/html/go_ai_za.html" target="_blank">鶴剛教授からひとこと</a></li>
           <li><a href="publications.html#2">修士・博士の研究生活</a></li>
-          <li><a href="publications.html#3">卒業後の進路</a></li>
+          <li><a href="members.html#3">卒業後の進路</a></li>
         </ul>
       </li>
       <li class="nav6"><a href="access.html">アクセス</a></li>
@@ -67,6 +67,21 @@
     <h2 id="1">代表的成果</h2>
     <h3 class="mb25">Ｘ線グループの最近の主な成果</h3>
     <table class="center">
+      <tr>
+        <td><img src="publications/tanaka_IC443.png" width="155" height="95" alt="宇宙線陽子の生成源を特定"></td>
+        <td class="left"><a href="http://www.kyoto-u.ac.jp/static/ja/news_data/h/h1/news7/2013_1/131220_5.htm" target="_blank" class="blank">宇宙線陽子の生成源を特定</a><br>
+          (2013年12月20日) </td>
+      </tr>
+      <tr>
+        <td><img src="publications/uchida_SN1006.png" width="95" height="95" alt="SN1006の非対称性爆発の研究成果"></td>
+        <td class="left"><a href="http://www.kyoto-u.ac.jp/static/ja/news_data/h/h1/news6/2013/130702_1.htm" target="_blank" class="blank">SN1006 の非対称性爆発の研究成果</a><br>
+          (2013年7月2日) </td>
+      </tr>
+      <tr>
+        <td><img src="publications/sawada_Tornado_Nebula.png" width="175" height="95" alt="Dicovery of Twin Thermal Plasma from the Tornado Nebula"></td>
+        <td class="left"><a href="http://www.kyoto-u.ac.jp/static/ja/news_data/h/h1/news6/2011/111125_1.htm" target="_blank" class="blank">Suzaku Dicovery of Twin Thermal Plasma from the Tornado Nebula</a><br>
+          (2011年11月25日) </td>
+      </tr>
       <tr>
         <td><img src="image/GC3D.jpg" width="95" height="95" alt="銀河の仕組み解明へ星のゆりかご立体図"></td>
         <td class="left"><a href="publications/20091007_yomiuri.jpg" target="_blank" class="blank">銀河の仕組み解明へ"星のゆりかご"立体図</a><br>
@@ -179,15 +194,74 @@
       The Newest version can be obtained from WWW pages above.</p>
     <ul>
       <li>Astrophysics Publication List<br>
-        2014 <a href="#a2013">2013</a> <a href="#a2012">2012</a> <a href="#a2011">2011</a> <a href="#a2010">2010</a> <a href="#a2009">2009</a> <a href="#a2008">2008</a> <a href="#a2007">2007</a> <a href="#a2006">2006</a></li>
+        2017 <a href="#a2016">2016</a> <a href="#a2015">2015</a> <a href="#a2014">2014</a> <a href="#a2013">2013</a> <a href="#a2012">2012</a> <a href="#a2011">2011</a> <a href="#a2010">2010</a> <a href="#a2009">2009</a> <a href="#a2008">2008</a> <a href="#a2007">2007</a> <a href="#a2006">2006</a></li>
       <li>Hardware Publication List<br>
-        <a href="#h2011">2011</a> <a href="#h2010">2010</a> <a href="#h2009">2009</a> <a href="#h2008">2008</a> <a href="#h2007">2007</a> <a href="#h2006">2006</a></li>
+        2017 <a href="#h2016">2016</a> <a href="#h2015">2015</a> <a href="#h2014">2014</a> <a href="#h2013">2013</a> <a href="#h2012">2012</a> <a href="#h2011">2011</a> <a href="#h2010">2010</a> <a href="#h2009">2009</a> <a href="#h2008">2008</a> <a href="#h2007">2007</a> <a href="#h2006">2006</a></li>
     </ul>
     <h3>Astrophysics Publication List    </h3>
+    <h4 id="a2016">FY2016</h4>
+    <ul>
+      <li>
+        <strong>X-ray study of the supernova remnant G337.2-0.7</strong>
+        <br>Takata, Akihiro; Nobukawa, Masayoshi; Uchida, Hiroyuki; Tsuru, Takeshi Go; Tanaka, Takaaki; Koyama, Katsuji</br>
+        <em>PASJ</em> <strong>68</strong> (2016)
+      </li>
+      <li>
+        <strong>Recombining plasma in the remnant of a core-collapsed supernova, Kes 17</strong>
+        <br>Washino, Ryosaku; Uchida, Hiroyuki; Nobukawa, Masayoshi; Tsuru, Takeshi Go; Tanaka, Takaaki; Kawabata Nobukawa, Kumiko; Koyama, Katsuji</br>
+        <em>PASJ</em> <strong>68</strong> (2016)
+      </li>
+      <li>
+        <strong>The First Fermi LAT Supernova Remnant Catalog</strong>
+        <br>F. Acero, et al. (including T. Tanaka)</br>
+        <em>PASJ</em> <strong>224</strong> (2016)
+      </li>
+      <li>
+        <strong>Localized Recombining Plasma in G166.0+4.3: A Supernova Remnant with an Unusual Morphology</strong>
+        <br>Hideaki Matsumura, Hiroyuki Uchida, Takaaki Tanaka, Takeshi Go Tsuru, Masayoshi Nobukawa, Kumiko Kawabata Nobukawa, and Makoto Itou</br>
+        <em>PASJ</em> <strong>69</strong> (2017)
+      </li>
+    </ul>
+    <h4 id="a2015">FY2015</h4>
+    <ul>
+      <li>
+        <strong>Enhancement of the 6.4 keV Line in the Inner Galactic Ridge: Proton-induced Fluorescence?</strong>
+        <br>K. K. Nobukawa, M. Nobukawa, H. Uchiyama, T. G. Tsuru, K. Torii, T. Tanaka, D. O. Chernyshov, Y. Fukui, V. A. Dogiel,  K. Koyama</br>
+        <em>ApJL</em> <strong>807</strong> (2015), L10
+      </li>
+      <li>
+        <strong>N49: The First Robust Discovery of Recombining Plasma in an Extra-galactic Supernova Remnant</strong>
+        <br>Uchida, Hiroyuki; Koyama, Katsuji; Yamaguchi, Hiroy</br>
+        <em>ApJ</em> <strong>808</strong> (2015), Issue 1, id.77
+      </li>
+      <li>
+        <strong>X-ray study of the supernova remnant G337.2-0.7</strong>
+        <br>Takata, Akihiro; Nobukawa, Masayoshi; Uchida, Hiroyuki; Tsuru, Takeshi Go; Tanaka, Takaaki; Koyama, Katsuji</br>
+        <em>PASJ</em> <strong>67</strong> (2015)
+      </li>
+    </ul>
+    <h4 id="a2014">FY2014</h4>
+    <ul>
+      <li>
+        <strong>Origin of the 6.4-keV line of the Galactic Ridge X-ray Emission - First Report -</strong>
+        <br>Tsuru, T. G.; Uchiyama, H.; Nobukawa, K. K.; Nobukawa, M.; Nakashima, S.; Koyama, K.; Torii, K.; Fukui, Y.</br>
+        <em>Suzaku-MAXI 2014</em>, Expanding the Frontiers of the X-ray Universe, proceedings of a conference held 19-22 February, 2014 at Ehime University, Japan. Edited by M. Ishida, R. Petre, and K. Mitsuda, (2014)
+      </li>
+      <li>
+        <strong>Suzaku Observation of Time Variability of X-ray Emission from Molecular Clouds in the Galactic Center</strong>
+        <br>Nobukawa, Masayoshi; Nakashima, Shinya; Nobukawa, Kumiko K.; Koyama, Katsuji</br>
+        <em>Suzaku-MAXI 2014</em>, Expanding the Frontiers of the X-ray Universe, proceedings of a conference held 19-22 February, 2014 at Ehime University, Japan. Edited by M. Ishida, R. Petre, and K. Mitsuda, (2014)
+      </li>
+      <li>
+        <strong>Discovery of the peculiar bipolar plasma in the Galactic center</strong>
+        <br>Nakashima, Shinya; Nobukawa, Masayoshi; Uchida, Hiroyuki; Tanaka, Takaaki; Tsuru, Takeshi Go; Koyama, Katsuji; Uchiyama, Hideki</br>
+        <em>Suzaku-MAXI 2014</em>, Expanding the Frontiers of the X-ray Universe, proceedings of a conference held 19-22 February, 2014 at Ehime University, Japan. Edited by M. Ishida, R. Petre, and K. Mitsuda, (2014)
+      </li>
+    </ul>
     <h4 id="a2013">FY2013</h4>
     <ul>
       <li><strong>Abundances in the Ejecta of Core-Collapsed Supernova Remnants, G350.1-0.3 and G349.7+0.2 </strong><br>
-        Masato Yasumi, Masayoshi Nobukawa, Shinya Nakashima, Hiroyuki Uchida, Ryusuke Sugawara, Takeshi Go Tsuru, Takaaki Tanaka and Katsuji Koyama. <br>
+        Masato Yasumi, Masayoshi Nobukawa, Shinya Nakashima, Hiroyuki Uchida, Ryusuke Sugawara, Takeshi Go Tsuru, Takaaki Tanaka and Katsuji Koyama. </br>
         <em>PASJ</em> <strong>66</strong> (2014), 68</li>
       <li><strong>Discovery of the Recombining Plasma in the South of the Galactic Center: a Relic of the Past Galactic Center Activity? </strong><br>
         Shinya Nakashima, Masayoshi Nobukawa, Hiroyuki Uchida, Takaaki Tanaka, Takeshi Go Tsuru, K. Koyama, H. Murakami, and H. Uchiyama. <br>
@@ -470,6 +544,60 @@
         <em>PASJ</em> <strong>59</strong> (2007) pp.327-338</li>
     </ul>
     <h3>Hardware Publication List</h3>
+    <h4 id="h2016">FY2016</h4>
+    <ul>
+      <li>
+        <strong>The first back-side illuminated types of Kyoto's X-ray astronomy SOIPIX</strong>
+        <br>Makoto Itou, Takeshi Go Tsuru, Takaaki Tanaka, Ayaki Takeda, Hideaki Matsumura, Shunichi Ohmura, Hiroyuki Uchida, Shinya Nakashima, Yasuo Arai, Ikuo Kurachi, Koji Mori, Ryota Takenaka, Yusuke Nishioka, Takayoshi Kohmura, Koki Tamasawa, Craig Tindall</br>
+        <em>NIM A</em> <strong>831</strong> (2016)
+      </li>
+      <li>
+        <strong>Reduction of cross-talks between circuit and sensor layer in the Kyoto's X-ray astronomy SOI pixel sensors with Double-SOI wafer</strong>
+        <br>Shunichi Ohmura, Takeshi Go Tsuru, Takaaki Tanaka, Hiroyuki Uchida, Ayaki Takeda, Hideaki Matsumura, Makoto Ito, Yasuo Arai, Ikuo Kurachi, Toshinobu Miyoshi, Shinya Nakashima, Koji Mori, Yusuke Nishioka, Nobuaki Takebayashi, Koki Noda, Takayoshi Kohmura, Kouki Tamasawa, Yusuke Ozawa, Tadashi Sato, Takahiro Konno, Shoji Kawahito, Keiichiro Kagawa, Keita Yasutomi, Hiroki Kamehama, Sumeet Shrestha, Kazuhiko Hara, Shunsuke Honda</br>
+        <em>NIM A</em> <strong>831</strong> (2016)
+      </li>
+    </ul>
+    <h4 id="h2015">FY2015</h4>
+    <ul>
+      <li>
+        <strong>Improving Charge-Collection Efficiency of SOI Pixel Sensors for X-ray Astronomy</strong>
+        <br>Hideaki Matsumura, Takeshi Go Tsuru, Takaaki Tanaka, Ayaki Takeda, Yasuo Arai, Koji Mori, Yusuke Nishioka, Ryota Takenaka, Takayoshi Kohmura, Shinya Nakashima, Takaki Hatsui, Yoshiki Kohmura, Dai Takei, Takashi Kameshima</br>
+        <em>NIM A</em> <strong>794</strong> (2015), 255
+      </li>
+      <li>
+        <strong>The Soft X-ray Imager (SXI) for the ASTRO-H Mission</strong>
+        <br>Tanaka, T., Tsunemi, H., Hayashida, K., et al.</br>
+        <em>Proc. SPIE</em> <strong>9601</strong> (2015)
+      </li>
+    </ul>
+    <h4 id="h2014">FY2014</h4>
+    <ul>
+      <li>
+        <strong>Use of a charge-injection technique to improve performance of the Soft X-ray Imager aboard ASTRO-H</strong>
+        <br>Kumiko K. Nobukawa, Takeshi G. Tsuru, Masayoshi Nobukawa, Takaaki Tanaka, Hiroyuki Uchida, Hiroshi Tsunemi, Kiyoshi Hayashida, Naohisa Anabuki, Hiroshi Nakajima, Ryo Nagino, Tadayasu Dotani,Masanobu Ozaki, Hiroshi Tomida, Chikara Natsukari, Masashi Kimura, Makoto Yamauchi, Koji Mori, Isamu Hatsukade, Yusuke Nishioka, Takayoshi Kohmura, Junko S. Hiraga, Hiroshi Murakami on behalf of the SXI team</br>
+        <em>NIM A</em> <strong>765</strong> (2014)
+      </li>
+      <li>
+        <strong>Development and Performance of Kyoto's X-ray Astronomical SOI pixel (SOIPIX) sensor</strong>
+        <br>Tsuru, Takeshi G.; Matsumura, Hideaki; Takeda, Ayaki; Tanaka, Takaaki; Nakashima, Shinya; Arai, Yasuo; Mori, Koji; Takenaka, Ryota; Nishioka, Yusuke; Kohmura, Takayoshi; Hatsui, Takaki; Kameshima, Takashi; Ozaki, Kyosuke; Kohmura, Yoshiki; Wagai, Tatsuya; Takei, Dai; Kawahito, Shoji; Kagawa, Keiichiro; Yasutomi, Keita; Kamehama, Hiroki; Shrestha, Sumeet</br>
+        <em>Proceedings of the SPIE</em> <strong>9144</strong> (2014)
+      </li>
+      <li>
+        <strong>Development and Evaluation of an Event-Driven SOI Pixel Detector for X-Ray Astronomy</strong>
+        <br>Ayaki Takeda, Takeshi Go Tsuru, Takaaki Tanaka, Hideaki Matsumura, Yasuo Arai, Koji Mori, Yusuke Nishioka, Ryota Takenaka, Takayoshi Kohmura, Shinya Nakashima, Shoji Kawahito, Keiichiro Kagawa, Keita Yasutomi, Hiroki Kamehama and Sumeet Shrestha</br>
+        <em>Proceedings of Science (PoS)</em> <strong>138</strong> (2014)
+      </li>
+      <li>
+        <strong>Improvement of spectroscopic performance using a charge-sensitive amplifier circuit for an X-ray astronomical SOI pixel detector</strong>
+        <br>A. Takeda, T.G. Tsuru, T. Tanaka, H. Uchida, H. Matsumura, Y. Arai, K. Mori, Y. Nishioka, R. Takenaka, T. Kohmura, S. Nakashima, S. Kawahito, K. Kagawa, K. Yasutomi, H. Kamehama and S. Shrestha</br>
+        <em>JINST</em> <strong>9 C05044</strong> (2014)
+      </li>
+      <li>
+        <strong>Investigation of Charge-Collection Efficiency of Kyoto's X-ray Astronomical SOI Pixel Sensors, XRPIX</strong>
+        <br>Hideaki Matsumura, Takeshi Go Tsuru, Takaaki Tanaka, Shinya Nakashima, Syukyo G. Ryu, Ayaki Takeda, Yasuo Arai, Toshinobu Miyoshi</br>
+        <em>NIM A</em> <strong>765</strong> (2014), 183
+      </li>
+    </ul>
     <h4 id="h2011">FY2011</h4>
     <ul>
       <li><strong>Development of the soft x-ray imager (SXI) for ASTRO-H </strong><br>
@@ -577,6 +705,13 @@
         <th width="656">タイトル</th>
         <th width="92">ダウンロード</th>
       </tr>
+      <tr>
+        <td>2015</td>
+        <td>信川 久実子</td>
+        <td>X-ray Study of Neutral Iron Line Emission in the Galactic Ridge: Contribution of Lowic Rays</td>
+        <td><a href="publications/kumikoD.pdf" target="_blank">PDF</a></td>
+      </tr>
+      <tr>
       <tr>
         <td>2013</td>
         <td>中島 真也</td>
@@ -746,6 +881,23 @@
         <th width="81">名前</th>
         <th width="656">タイトル</th>
         <th width="92">ダウンロード</th>
+      </tr>
+      <tr>
+        <td rowspan="2">2016</td>  
+        <td>伊藤 真音</td>
+        <td>次世代X線天文衛星搭載に向けた裏面照射型SOIピクセル検出器の軟X線感度の改善</td>
+        <td><a href="publications/itouM.pdf" target="_blank">PDF</a></td>
+      </tr>
+      <tr>
+        <td>大村 峻一</td>
+        <td>すざく衛星による狭輝線セイファート1型銀河の広帯域観測</td>
+        <td><a href="publications/ohmuraM.pdf" target="_blank">PDF</a></td>
+      </tr>
+      <tr>
+        <td rowspan="1">2015</td>
+        <td>鷲野 遼作</td>
+        <td>ASTRO-H衛星搭載X線CCDカメラSXIの性能評価と較正方法の確立</td>
+        <td><a href="publications/washinoM.pdf" target="_blank">PDF</a></td>
       </tr>
       <tr>
         <td rowspan="2">2014</td>
@@ -967,13 +1119,9 @@
   <footer>
     <div id="link">
       <ul>
-        <li><a href="#">リンク</a></li>
-        <li><a href="#">リンク</a></li>
-        <li><a href="#">リンク</a></li>
-        <li><a href="#">リンク</a></li>
-        <li><a href="#">リンク</a></li>
-        <li><a href="#">リンク</a></li>
-        <li><a href="#">リンク</a></li>
+        <li><a href="http://www.sci.kyoto-u.ac.jp/modules/tinycontent/">京都大学 理学研究科</a></li>
+        <li><a href="http://www.scphys.kyoto-u.ac.jp/">京都大学 理学研究科 物理学第二教室</a></li>
+        <li><a href="http://www.usss.kyoto-u.ac.jp/">宇宙ユニット</a></li>
       </ul>
     </div>
     <div id="address_frame">
