--- a/index.html
+++ b/index.html
@@ -155,7 +155,9 @@
 
 					<dl>
 
-
+					        <dt>2017.12.14</dt>
+						
+						<dd>M1 の原田颯大さんが<a href="https://indico.cern.ch/event/577879/">  2nd Workshop on SOI Pixel Detector - SOIPIX2017</a> にて <a href="/X/publications/harada_poster_award.jpg">Poster Award</a> を受賞しました。 <a href="http://www-cr.scphys.kyoto-u.ac.jp/X/">リンク</a></dd>
 
 						<dt>2017.03.23</dt>
 
