--- a/X/overview.html
+++ b/X/overview.html
@@ -45,9 +45,9 @@
       </li>
       <li class="nav5"><a href="recruitment.html">大学院生募集</a>
         <ul>
-          <li><a href="publications.html#1">鶴剛教授からひとこと</a></li>
-          <li><a href="publications.html#2">修士・博士の研究生活</a></li>
-          <li><a href="publications.html#3">卒業後の進路</a></li>
+          <li><a href="http://www-cr.scphys.kyoto-u.ac.jp/member/tsuru/html/go_ai_za.html" target="_blank">鶴剛教授からひとこと</a></li>
+          <li><a href="p">修士・博士の研究生活</a></li>
+          <li><a href="members.html#3">卒業後の進路</a></li>
         </ul>
       </li>
       <li class="nav6"><a href="access.html">アクセス</a></li>
@@ -111,13 +111,9 @@
   <footer>
     <div id="link">
       <ul>
-        <li><a href="#">リンク</a></li>
-        <li><a href="#">リンク</a></li>
-        <li><a href="#">リンク</a></li>
-        <li><a href="#">リンク</a></li>
-        <li><a href="#">リンク</a></li>
-        <li><a href="#">リンク</a></li>
-        <li><a href="#">リンク</a></li>
+        <li><a href="http://www.sci.kyoto-u.ac.jp/modules/tinycontent/">京都大学 理学研究科</a></li>
+        <li><a href="http://www.scphys.kyoto-u.ac.jp/">京都大学 理学研究科 物理学第二教室</a></li>
+        <li><a href="http://www.usss.kyoto-u.ac.jp/">宇宙ユニット</a></li>
       </ul>
     </div>
     <div id="address_frame">
