--- a/X/template.html
+++ b/X/template.html
@@ -45,9 +45,9 @@
       </li>
       <li class="nav5"><a href="recruitment.html">大学院生募集</a>
         <ul>
-          <li><a href="publications.html#1">鶴剛教授からひとこと</a></li>
+          <li><a href="http://www-cr.scphys.kyoto-u.ac.jp/member/tsuru/html/go_ai_za.html" target="_blank">鶴剛教授からひとこと</a></li>
           <li><a href="publications.html#2">修士・博士の研究生活</a></li>
-          <li><a href="publications.html#3">卒業後の進路</a></li>
+          <li><a href="members.html#3">卒業後の進路</a></li>
         </ul>
       </li>
       <li class="nav6"><a href="access.html">アクセス</a></li>
